<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="title_favorite">Favorite</string>
    <string name="github_user">Github User</string>
    <string name="user">user</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="search_username">Search username</string>
    <string name="love">love</string>
    <string name="hi">Hi, Putri!</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="_20">20</string>
    <string name="following">Following</string>
    <string name="_10">10</string>
</resources>